@startuml

title __EXCEPTÝON's Class Diagram__\n

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.BaseException {
          - errors : List<String>
          - message : String
          {static} - serialVersionUID : long
          + BaseException()
          + equals()
          + getErrors()
          + getMessage()
          + getType()
          + hashCode()
          + setErrors()
          + setMessage()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      enum BaseExceptionType {
        BASE_EXCEPTION
        KULLANICI_ADI_MAIL_PHONE_KULLANILIYOR
        VIEW_EXCEPTION
        code
        validationMessage
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.BusinessRuleException {
          - messageBundle : boolean
          - params : List<String>
          - problematicItem : String
          + BusinessRuleException()
          + BusinessRuleException()
          {static} + builder()
          + equals()
          + getBaseExceptionType()
          + getParams()
          + getProblematicItem()
          + hashCode()
          + isMessageBundle()
          + setBaseExceptionType()
          + setMessageBundle()
          + setParams()
          + setProblematicItem()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.BusinessRuleException.BusinessRuleExceptionBuilder {
          - messageBundle : boolean
          - params : List<String>
          - problematicItem : String
          + baseExceptionType()
          + build()
          + messageBundle()
          + params()
          + problematicItem()
          + toString()
          ~ BusinessRuleExceptionBuilder()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace exception {
      class com.team1.animalproject.exception.ViewException {
          - businessRuleExceptions : List<BusinessRuleException>
          {static} - serialVersionUID : long
          + ViewException()
          + ViewException()
          + ViewException()
          + equals()
          + getBusinessRuleExceptions()
          + hashCode()
          + setBusinessRuleExceptions()
          # canEqual()
      }
    }
  }
  

  com.team1.animalproject.exception.BaseException o-- com.team1.animalproject.exception.BaseExceptionType : type
  com.team1.animalproject.exception.BusinessRuleException o-- com.team1.animalproject.exception.BaseExceptionType : baseExceptionType
  com.team1.animalproject.exception.BusinessRuleException +-down- com.team1.animalproject.exception.BusinessRuleException.BusinessRuleExceptionBuilder
  com.team1.animalproject.exception.BusinessRuleException.BusinessRuleExceptionBuilder o-- com.team1.animalproject.exception.BaseExceptionType : baseExceptionType
  com.team1.animalproject.exception.ViewException -up-|> com.team1.animalproject.exception.BaseException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
